--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         <section>
             <h2>Sobre</h2>
-            <p>Qualquer dúvida ou necessidade de alguma explicação mais detalhada entre em contato diretamente através deste site, na página de contato você tem um formulário de submissão de mensagem, ou envie um email diretamente para: <a href="mailto:ayrtonfilho@usp.br">ayrtonfilho@usp.br</a>.</p>
+            <p>Qualquer dúvida ou necessidade de alguma explicação mais detalhada entre em contato diretamente através deste site, na página de contato você tem um formulário de submissão de mensagem, ou envie um email diretamente para: <a href="mailto:sucnclimatechallanges@gmail.com">sucnclimatechallanges@gmail.com</a>.</p>
         </section>
     </main>
 </body>
